# bariumsulfate

./: CMakeLists.txt  README
src/: main.cpp
src/connection/: client.cpp  client.hpp  connection.cpp  connection.hpp
src/misc/: log.hpp
src/protocol/: byte_stream.hpp  handlers.hpp  varint.hpp
src/server/: io_service_pool.hpp  server.hpp
